crates/credential/tests/probes/scheme_sensitivity_public_with_option_secret.stderr
error: field `maybe` on #[auth_scheme(public)] struct cannot be SecretString — declare #[auth_scheme(sensitive)] instead (per Tech Spec §15.5)
  --> tests/probes/scheme_sensitivity_public_with_option_secret.rs:13:5
   |
13 |     pub maybe: Option<SecretString>, // Option<SecretString> on public — REJECT
   |     ^^^
